tests/ui/type-path-eof1.stderr
error: no rules expected the token `<`
 --> $DIR/type-path-eof1.rs:6:17
  |
6 |     input = [{ S< }]
  |                 ^

error: aborting due to previous error

